--- a/web/package.json
+++ b/web/package.json
@@ -17,8 +17,15 @@
     "@redwoodjs/forms": "3.3.0",
     "@redwoodjs/router": "3.3.0",
     "@redwoodjs/web": "3.3.0",
+    "humanize-string": "2.1.0",
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "postcss-loader": "^7.0.1",
+    "tailwindcss": "^3.2.2"
   }
 }
